--- a/app/views/topics/_context_main.html.haml
+++ b/app/views/topics/_context_main.html.haml
@@ -7,11 +7,11 @@
   .span3
     %ul.nav.nav-list.bs-docs-sidenav.affix
       %li.active
-        %a{:href => "#typography"}
+        = link_to topic_path(topic) do
           %i.icon-chevron-right
           专题首页
       %li
-        %a{:href => "#code"}
+        = link_to topic_topic_posts_path(topic) do
           %i.icon-chevron-right
           专题攻略
       %li
