improvement of home page

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -231,12 +231,12 @@ body {
 }
 
 a {
-  color: #0088cc;
+  color: #424242;
   text-decoration: none;
 }
 
 a:hover {
-  color: #005580;
+  color: #4B941E;
   text-decoration: underline;
 }
 
