--- a/app/views/topics/_entry.html.haml
+++ b/app/views/topics/_entry.html.haml
@@ -1,17 +1,30 @@
-%li
+%li.topic
   .thumbnail
     = link_to topic_path(resource) do
       = image_tag resource.logo.url
     .caption
       %h3= link_to resource.title, topic_path(resource)
-      %p.desc= resource.description
+      %p.desc
+        %i.l-dot
+        = resource.description
+        %i.r-dot
       %ul.state_bar.clearfix
-        %li.rate.clearfix
+        %li
           推荐指数：
           .raty{ data: { rate: resource.rating } }
         %li
-          关注：
-          %span 29001
-        %li
-          发布了100篇文章、10个视频、58个图片和20个下载信息
-        %li= link_to t('views.layout.topic_detail').html_safe, topic_path(resource)
+          %span
+            关注
+            %strong= 10
+          %span
+            文章
+            %strong= resource.posts_count
+          %span
+            视频
+            %strong= resource.videos_count
+          %span
+            图片
+            %strong= resource.photos_count
+          %span.last
+            资源
+            %strong= resource.downloads_count
