MISC - change home page and topic overview page

--- a/app/assets/stylesheets/docs.css.scss
+++ b/app/assets/stylesheets/docs.css.scss
@@ -180,7 +180,7 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
 /* Masthead (docs home)
 ------------------------- */
 .masthead {
-  padding: 70px 0 80px;
+  // padding: 70px 0 80px;
   margin-bottom: 0;
   color: #fff;
 }
